myapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deploy
  labels:
    app: myappv
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myappv
  template:
    metadata:
      labels:
        app: myappv
    spec:
      containers:
      - name: myappimage
        image: jesteenwrangler/pythonflaskapi:myappimage
        ports:
        - containerPort: 5000
          hostPort: 5000
