myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myappv
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: LoadBalancer
